--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -117,7 +117,7 @@ Version: 1.0.0
   --th-border-color4: rgba(198, 201, 212, 0.5);
   --th-border-color5: #49515C;
   --th-border-color6: #383D46;
-  --title-font: "Fredoka", sans-serif;
+  --title-font: "Poppins", sans-serif;
   --body-font: "Onest", sans-serif;
   --icon-font: "Font Awesome 6 Pro";
   --main-container: 1320px;
