--- a/public/assets/css/colors/scheme-01.css
+++ b/public/assets/css/colors/scheme-01.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #48b1fb;
   --primary-color-rgb: 72, 177, 251;
-  --secondary-color: #FEE74A;
+  --secondary-color: #48b1fb;
   --secondary-color-rgb: 254, 231, 74;
   --tertiary-color: #0A3F87;
   --tertiary-color-rgb: 10, 63, 135;
